<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:layoutDirection="rtl">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/login_background"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <EditText
            android:gravity="start|center_vertical"
            android:id="@+id/et_main_activity_username"
            android:layout_margin="8dp"
            android:textAlignment="viewStart"

            android:hint="@string/email"
            android:inputType="phone"
            android:layout_width="300dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/edittext_background"
            android:padding="8dp"
            />
        <EditText
            android:id="@+id/et_main_activity_password"
            android:textAlignment="viewStart"
            android:hint="@string/password"
            android:layout_margin="8dp"
            android:inputType="textPassword"
            android:background="@drawable/edittext_background"
            android:padding="8dp"
            android:layout_width="300dp"
            android:layout_height="?attr/actionBarSize"
            />
        <Button
            android:id="@+id/btn_main_activity_login"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:text="@string/login"
            android:layout_margin="8dp"
            android:layout_width="300dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/botton_background"/>

    </LinearLayout>

</LinearLayout>