<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    app:cardElevation="8dp"
    android:focusable="true"
    android:background="@color/cardview_light_background"
    android:layout_alignParentBottom="true"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="200dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    android:layoutDirection="rtl">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
            <LinearLayout
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <androidx.cardview.widget.CardView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:cardCornerRadius="16dp"
                    android:layout_margin="8dp"
                    >
                    <com.facebook.drawee.view.SimpleDraweeView
                        android:id="@+id/iv_new_order_dialog_user_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/user"/>
                </androidx.cardview.widget.CardView>
                <TextView
                    android:id="@+id/tv_new_order_dialog_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="أيمن عياد"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <LinearLayout
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    >
                    <LinearLayout
                        android:layout_gravity="end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView

                            android:text="@string/oreder_num"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/tv_new_order_dialog_order_num"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"
                            android:textSize="18dp"
                            android:text="DFK-501E9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
        </LinearLayout>
        <View
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            />


        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/btn_new_order_dialog_accept"
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/botton_background"
                android:text="@string/accept_order"
                android:textColor="@android:color/white"
                android:layout_margin="8dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"/>
            <Button
                android:id="@+id/btn_new_order_dialog_reject"
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cancel_oreder_btn_background"
                android:text="@string/cancel_oreder"
                android:textColor="@color/colorAccent"
                android:layout_margin="8dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>